--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,7 +8,7 @@
     <div class="page about">
       <h3>The Scoop</h3> 
 	  <p>Find and share some of the funniest memes, videos, and articles from Colleges nationwide on Campusmack.com.  If you've got some ridiculously funny memes you'd like to share, <a href="http://www.campusmack.com/sign_up">sign up </a>today and start smacking!</p>   	
-	  <p>SMACK = No definition needed.  Would you smack your Mom?</p> 
+	  <p>SMACK = No explanation needed.  Would you smack your Mom?</p> 
 	  <p>REDEMPTION = Bragging Rights<p>
 
       <p>No bullying, nudity, or lame jokes.  That is all....</p>
@@ -21,8 +21,8 @@
         <div class="aboutBio">
           <h2>Michael Bivone</h2>
 
-          <h3>CEO &amp; Founder</h3>
-          <p>In addition to working on all things Campusmack, Michael also works as an independent supply chain consultant for a major U.S. telecom provider.  Michael graduated from Georgia Tech with an Industrial Engineering degree and a Certificate in Finance.<br><br>
+          <h3>Founder</h3>
+          <p>In addition to working on all things Campusmack, Michael also works as a consultant for a major U.S. telecom provider.  Michael graduated from Georgia Tech with an Industrial Engineering degree and a Certificate in Finance.<br><br>
 Michael's inspiration for Campusmack came from many exchanges with his grade school buddies who went to rival colleges.<br><br>
             <a href="http://www.linkedin.com/pub/michael-bivone/4/611/103">LinkedIn </a>| <a href="https://twitter.com/mikebivone/">Twitter</a>
             </p>
