--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -770,7 +770,7 @@ a.sign_up:hover {
   height: 32px;
 }
 
-.view_more_link, .vml_welcome a, a.view_more {
+.view_more_link a, .vml_welcome a, a.view_more {
   background-image: url(/assets/view_more_button.png);
   background-repeat: no-repeat;
   background-position: top;
@@ -786,7 +786,7 @@ a.sign_up:hover {
   height: 26px;
 }
 
-.view_more_link, .vml_welcome a:hover, a.view_more:hover {
+.view_more_link a:hover, .vml_welcome a:hover, a.view_more:hover {
   background-position: bottom;
   color: #222222;
 }
@@ -1159,6 +1159,7 @@ ul.news li {
   margin: 15px 0 0 20px;
   float: left;
   width: 100%;
+  height: 32px;
 }
 
 .section_title a:hover,
@@ -1902,6 +1903,7 @@ ul.items {
 .featured_articles .team-item .item-top h3, .articles .team-item .item-top h3 {
   font-size: 18px;
   font-weight: normal;
+ margin-bottom: 5px;
 }
 
 .featured_articles .team-item .summary, .articles .team-item .summary {
@@ -1925,6 +1927,16 @@ ul.items {
   left: 0;
   position: absolute;
   top: 120px;
+}
+
+a.divwrap {
+  color: #000000;
+  text-decoration: none;
+
+}
+
+a.divwrap:hover {
+	color:#B00000; 
 }
 
 .article .content_category {
@@ -1963,9 +1975,10 @@ ul.items {
   margin-bottom: 5px;
 }
 
-.team-item .item-top h3 {
+.team-item .item-top-small h3 {
   font-size: 12px;
   margin-bottom: 5px;
+  height: 12px;
 }
 
 .team-item .item-top h3 a:hover {
