--- a/app/views/posts/_small_preview.html.erb
+++ b/app/views/posts/_small_preview.html.erb
@@ -1,6 +1,6 @@
 <li class="aborder team-item">
-  <div class="item-top clearfix">
-    <h3><%= link_to truncate(post.title.upcase, :length => 22), post, :title => post.title %></h3>
+  <div class="item-top-small clearfix">
+    <h3><%= link_to truncate(post.try(:title).upcase, :length => 22), post, :title => post.try(:title) %></h3>
     <div class="which-college">
 	<%= link_to('<img src="/assets/video_icon.png"/>'.html_safe, post) if post.video || (post.article && !post.article.video_url.blank?) %> 
 	<span> COLLEGE:</span>
@@ -18,8 +18,13 @@
 	<span>USER: </span><%= link_to(truncate(post.user.try(:username), :length => 16), post.user, :class => :author) %>
 	</div>
 </div>
+  <%=link_to post, :class => "divwrap" do %>
   <div class="summary">
-    <%= censoring(truncate(strip_tags(post.summary), :length => 75)) %>
+  <%= censoring(truncate(strip_tags(post.summary), :length => 75)) %>
+  <% if post.summary.empty?%>
+  <span>[comments]</span>
+  <% end %>
   </div>
+  <% end %>
   <%= share_and_voting_icons(post, :preview) %>
 </li>
