--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -74,7 +74,7 @@
           var postcontent = [];
        	  postcontent[0] = '<%= f.fields_for :photo, Photo.new do |pf| %>
             <tr>
-              <td class="description"><%= pf.label :image, 'Meme:' %></td>
+              <td class="description"><%= pf.label :image, 'Meme/Photo:' %></td>
               <td class="entry"><%= pf.file_field :image, :validate => false %></td>
             </tr>
           <% end.gsub(/\r|\n/, '').html_safe %>
@@ -154,7 +154,7 @@
             <table id="shifting_fields" cellpadding="0" cellspacing="0">
 			<%= f.fields_for :photo, Photo.new do |pf| %>
 			  <tr>
-		        <td class="description"><%= pf.label :image, 'Meme:' %></td>
+		        <td class="description"><%= pf.label :image, 'Meme/Photo:' %></td>
 		        <td class="entry"><%= pf.file_field :image, :validate => false %></td>
 		      </tr>
 			<% end %>
