--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -140,7 +140,7 @@
               </tr>
             <% end %>
             <tr>
-              <td class="description"><%= f.label :title, 'Title:' %></td>
+              <td class="description"><%= f.label :title, 'Title (optional):' %></td>
               <td class="entry"><%= f.text_field :title %></td>
             </tr>
             <% if can? :manage, Post %>
@@ -167,7 +167,7 @@
 		  <% end %>
           <table cellpadding="0" cellspacing="0">
             <tr>
-              <td class="description va-top"><%= f.label :summary, 'Summary:' %></td>
+              <td class="description va-top"><%= f.label :summary, 'Summary (Optional):' %></td>
               <td class="entry"><%= f.text_area :summary %></td>
             </tr>
           </table>
