--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -45,7 +45,7 @@
 
         <div class="smack_info">
     <span class="team">
-      Team:
+      College:
       <%= link_to @post.postable.name, method("#{@post.postable_type.downcase}_path").call(@post.postable) %>
     </span>
           Posted
