--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -1,3 +1,6 @@
+<% meta_tags({ "description" => "Find, post, and share funny #{@college.name} #{@college.abbrev} memes, videos, and articles."
+  }) -%>
+
 <div class="content new_level with_submenu">
   <%= render :partial => 'shared/masthead' %>
   <div class="content_title"><%= @college.name %></div>
