--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -16,18 +16,17 @@
 
       <h4>What is a Smack?<a name="q1"></a></h4>
 
-      <p>A Smack can be a photo, youtube video, or a news article about a Campus that can be used as smack talk against
+      <p>A Smack can be a meme, youtube video, or a news article about a Campus that can be used as smack talk against
         that Campus. For example, a photo of a Duke basketball player getting dunked on by a UNC player would be a photo
         Smack that a user could post onto the Duke landing page. Once the Smack is posted, it can be viewed by other
         users and sent as Smack.</p>
 
       <h4>What does "Send as Smack" do?<a name="q2"></a></h4>
 
-      <p>Everything posted onto Campusmack can be sent as Smack Talk. If you find a post on Campusmack that you’d like
+      <p>Everything posted onto Campusmack can be shared easily. If you find a post on Campusmack that you’d like
         to rub in the face of the opposition,
         click the <%= image_tag('about/send_as_smack_big.jpg') %> button associated with that post. You’ll be brought to
-        a landing page that allows you to import contacts from your preferred email provider (Gmail, Yahoo, AOL, etc.)
-        and send an email to those you want to Smack. You can type in a custom message and once you click “Send” and
+        a landing page that allows you to import contacts and send an email to those you want to Smack. You can type in a custom message and once you click “Send” and
         email will be sent from our servers to the people you selected to receive the Smack. The content from the post
         you chose to share will show up in the recipients Inbox with a Subject line that reads "You just got SMACKED by
         (your first name) (your last name)".</p>
