--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<% meta_tags({ "description" => @page_description}) -%>
 <% content_for :js do %>
   var campus_select = null;
   var post_popup_to = null;
