--- a/app/views/posts/_news_preview.html.erb
+++ b/app/views/posts/_news_preview.html.erb
@@ -1,7 +1,7 @@
 <li class="team-item">
   <div class="summary">
     <%= link_to censoring(truncate(post.try(:title), :length => 80)), [post.postable, post] %>
-    <%= link_to "Article Preview", post.news_post.url, :class => 'snap_shots' %>
+    <%= link_to "Article Link", post.news_post.url%>
   </div>
   <%= share_and_voting_icons(post, :news_preview) %>
 </li>
