--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,8 +14,9 @@
 		<% if controller_name != "article_posts" && controller_name != "news_posts" %>   
 			<ul class="items four_col_view">
 		      <% @posts.each do |post| %>
-		      <%= render "posts/small_preview", :post => post %>
-			
+			  <%if post.postable_type != "Blog"%>
+		        <%= render "posts/small_preview", :post => post %>
+		      <% end %>		
 			<% end %>
 			</ul>
 		      <% else %>
