--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -43,10 +43,17 @@
         </ul>
 
         <div class="smack_info">
+	<% if !@parent.is_a?(Blog)%>
     <span class="team">
       College:
       <%= link_to @post.postable.name, method("#{@post.postable_type.downcase}_path").call(@post.postable) %>
     </span>
+    <% else %>
+  <span class="team">
+      From:
+      <%= link_to @post.postable.name, method("#{@post.postable_type.downcase}_path").call(@post.postable) %>
+    </span>
+	<% end %>
           Posted
           <span class="date"><%= formatted_datetime(@post.created_at.to_datetime) %>, </span>
           <em>by</em>
@@ -71,7 +78,7 @@
           </div>
         <% end %>
         <% if @post.news_post %>
-          <%= link_to "Article Preview", @post.news_post.url, :class => 'snap_shots' unless @post.news_post.blank? %>
+          <%= link_to "Article Link", @post.news_post.url unless @post.news_post.blank? %>
           <% unless @post.news_post.image_file_name.blank? %>
             <div class="photo">
               <img src="<%= @post.news_post.image_url(:large) %>" alt=""/>
