--- a/app/views/welcome/_sotw.html.erb
+++ b/app/views/welcome/_sotw.html.erb
@@ -12,7 +12,7 @@
     <% if sotw.video %>
       <%= youtube_embed(sotw.video.url, :medium) %>
     <% end %>
-    <%= link_to "Article Preview", sotw.news_post.url, :class => 'snap_shots' unless sotw.news_post.blank? %>
+    <%= link_to "Article Link", sotw.news_post.url %>
   </div>
   <div class="img_title">
     <%= sotw.created_at.to_date.to_s(:long) %> by <%= link_to(truncate(sotw.user.try(:username), :length => 16), sotw.user) %>
