--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2116,6 +2116,13 @@ ul.actions li {
   overflow: hidden;
 }
 
+.team-item .preview img {
+  position: relative;
+  min-height: 135px;
+  max-width: 180px;
+  overflow: hidden;
+}
+
 .team-item .summary {
   font-size: 13px;
   height: 65px;
@@ -2532,9 +2539,4 @@ border-left: 1px solid #C4C4C4;      */
 .aboutProfile a {
   color: #0A5CA6;
   text-decoration: none;
-}
-
-.preview img {
-  min-height: 135px;
-  max-width: 180px;
 }
