--- a/app/views/posts/_small_preview.html.erb
+++ b/app/views/posts/_small_preview.html.erb
@@ -10,7 +10,7 @@
   <div class="preview">
     <%= youtube_thumbnail(post.youtube_thumbnail_url,[post.postable, post]) if post.video || (post.article && !post.article.video_url.blank?) %>
     <% if post.photo || (post.article && post.article.image.exists?) %>
-        <a class="photo" href="<%= post.photo_url(:large) %>"><img src="<%= post.photo_url(:medium) %>" alt=""/></a>
+        <a class="photo" href="<%= post.photo_url(:large) %>"><div class="img_cont"><img src="<%= post.photo_url(:medium) %>" alt=""/></div></a>
     <% end %>
   </div>
 <div class="which-college">
