--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -16,7 +16,7 @@
     <% end %>
   </div>
   <div class="title">
-	<%= link_to('<img src="/assets/video_icon.png"/>'.html_safe, post) if post.video || (post.article && !post.article.video_url.blank?) %>
+	<%= link_to('<img src="/assets/video_icon.png"/ alt="">'.html_safe, post) if post.video || (post.article && !post.article.video_url.blank?) %>
 	<%= link_to truncate(censoring(post.try(:title), :length => 60)), [post.postable, post] %>
     <% if can? :manage, Article and !post.published? %>
       <span style="color:red">Unpublished</span>
