about page edit

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,7 +7,7 @@
   <div class="content_container">
     <div class="page about">
       <h3>The Scoop</h3> 
-	  <p>Find and share some of the funniest memes, videos, and articles from Colleges nationwide on Campusmack.com.  If you've got some ridiculously funny memes you'd like to share, <a href="http://www.campusmack.com/sign_up">sign up </a>today and start smacking!</p>   	
+	  <p>Find, share, and vote on some of the funniest memes, videos, and articles from Colleges nationwide on Campusmack.com.  Campusmack makes trolling the colleges you love to hate easy.  If you've got some ridiculously funny memes you'd like to share, <a href="http://www.campusmack.com/sign_up">sign up </a>today and start smacking!</p>   	
 	  <p>SMACK = No explanation needed.  Would you smack your Mom?</p> 
 	  <p>REDEMPTION = Bragging Rights<p>
 
