--- a/app/views/posts/_articles_preview.html.erb
+++ b/app/views/posts/_articles_preview.html.erb
@@ -2,7 +2,7 @@
   <div class="preview">
     <%= youtube_thumbnail(post.youtube_thumbnail_url,[post.postable, post]) if post.video || (post.article && !post.article.video_url.blank?) %>
     <% if post.photo || (post.article && post.article.image.exists?) %>
-        <a class="photo" href="<%= post.photo_url(:large) %>"><img src="<%= post.photo_url(:medium) %>" alt="" width="180" height="135"/></a>
+        <a class="photo" href="<%= post.photo_url(:large) %>"><img src="<%= post.photo_url(:medium) %>" alt="" width="180px" height="135px"/></a>
     <% end %>
   </div>
   <div class="item-top">
@@ -29,5 +29,5 @@
     <div class="votes">
      <%= share_and_voting_icons(post, :show) %>
     </div>
-</div>
+  </div>
 </li>
