--- a/app/views/shared/_sorter.html.erb
+++ b/app/views/shared/_sorter.html.erb
@@ -17,28 +17,30 @@
   });
 <% end %>
 <div class="category_sort clearfix">
-<div class="category_sort_div">
-  Sort by:
-  <%= link_to "Post Created#{ @order[0, 10] == "created_at" ? @order[-4, 4] == "desc" ? " ▼" : " ▲" : "" }", "?order=created_at%20#{@order[0, 10] == "created_at" && @order[-4, 4] == "desc" ? "asc" : "desc"}", :id => "sort_created_at", :class => "sort_switch" %>
-  |
-  <%= link_to "Votes For#{ @order[0, 8] == "up_votes" ? @order[-4, 4] == "desc" ? " ▼" : " ▲" : "" }", "?order=up_votes%20#{@order[0, 8] == "up_votes" && @order[-4, 4] == "desc" ? "asc" : "desc"}", :id => "sort_up_votes", :class => "sort_switch" %>
-  |
-  <%= link_to "Votes Against#{ @order[0, 10] == "down_votes" ? @order[-4, 4] == "desc" ? " ▼" : " ▲" : "" }", "?order=down_votes%20#{@order[0, 10] == "down_votes" && @order[-4, 4] == "desc" ? "asc" : "desc"}", :id => "sort_down_votes", :class => "sort_switch" %>
-</div>
-  <div id="per_page">
-    <ul class="per_page">
-      <% Post::PER_PAGE_DEFAULT.each do |pp| %>
-        <li>
-          <% if @per_page.to_i == pp %>
-            <%= pp %>
-          <% else %>
-            <%= link_to pp, "?order=#{@order}&per=#{pp}", :class => "per_page_switch" %>
-          <% end %>
-        </li>
-      <% end %>
-    </ul>
-    <div class="items_per_page">
-      Items per page:
-    </div>
+  <div class="category_sort_div">
+    Sort by:
+    <%= link_to "Post Created#{ @order[0, 10] == "created_at" ? @order[-4, 4] == "desc" ? " ▼" : " ▲" : "" }", "?order=created_at%20#{@order[0, 10] == "created_at" && @order[-4, 4] == "desc" ? "asc" : "desc"}", :id => "sort_created_at", :class => "sort_switch" %>
+    |
+    <%= link_to "Votes For#{ @order[0, 8] == "up_votes" ? @order[-4, 4] == "desc" ? " ▼" : " ▲" : "" }", "?order=up_votes%20#{@order[0, 8] == "up_votes" && @order[-4, 4] == "desc" ? "asc" : "desc"}", :id => "sort_up_votes", :class => "sort_switch" %>
+    |
+    <%= link_to "Votes Against#{ @order[0, 10] == "down_votes" ? @order[-4, 4] == "desc" ? " ▼" : " ▲" : "" }", "?order=down_votes%20#{@order[0, 10] == "down_votes" && @order[-4, 4] == "desc" ? "asc" : "desc"}", :id => "sort_down_votes", :class => "sort_switch" %>
   </div>
+  <% unless infinite_scrolling %>
+    <div id="per_page">
+      <ul class="per_page">
+        <% Post::PER_PAGE_DEFAULT.each do |pp| %>
+          <li>
+            <% if @per_page.to_i == pp %>
+              <%= pp %>
+            <% else %>
+              <%= link_to pp, "?order=#{@order}&per=#{pp}", :class => "per_page_switch" %>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+      <div class="items_per_page">
+        Items per page:
+      </div>
+    </div>
+  <% end %>
 </div>
